cluster/default/gitea/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-gitea
  namespace: default
  labels:
    app: postgres-gitea
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres-gitea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-gitea
  namespace: default
  labels:
    app: postgres-gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-gitea
  template:
    metadata:
      labels:
        app: postgres-gitea
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: postgres
        image: postgres:11 # no-up
        ports:
        - containerPort: 5432
          name: postgresdb
        volumeMounts:
        - name: pv-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pv-data
        persistentVolumeClaim:
          claimName: postgres-gitea
